--- a/client/src/components/PrimaryButton/PrimaryButton.scss
+++ b/client/src/components/PrimaryButton/PrimaryButton.scss
@@ -40,7 +40,7 @@
         .primaryButtonCenter {
             display: flex;
             transform: scale(1);
-            transition: transform 0.15s;
+            transition: transform 0.15s cubic-bezier(0.15, -0.56, 0.35, 2.41);
 
             .leftButtonCenter {
                 height: 2rem;
